--- a/portfolio_app/package.json
+++ b/portfolio_app/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@vueform/toggle": "^2.0.1",
     "axios": "^0.26.0",
+    "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
+    "eslint": "^8.10.0",
+    "eslint-plugin-vue": "^8.5.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue3-carousel": "^0.1.36",
